[BE] feat #115: 스웨거 응답 형식 리팩토링 및 이력서 CRUD 구현